fix pagination view in mobile from overlapping

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -62,6 +62,7 @@ a:link { text-decoration: none; }
   .flickr_pagination a {
     border: 1px solid whitesmoke;
     color: whitesmoke;
+    line-height: 2.0em;
     text-decoration: none; }
     .flickr_pagination a:hover, .flickr_pagination a:focus {
       border-color: gray;
